results/SVCOMP/2-shot/log-astore_aload1-2024_03_18_23_18_55.txt
class astore_aload1 {
    //@ ensures boolean_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; boolean_array[i] <==> (i % 2 == 0);
    //@ ensures byte_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; byte_array[i] == (byte)i;
    //@ ensures short_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; short_array[i] == (short)i;
    //@ ensures int_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; int_array[i] == i;
    //@ ensures long_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; long_array[i] == (long)i;
    //@ ensures char_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; char_array[i] == (char)i;
    //@ ensures double_array.length == 10;
    //@ ensures \forall int i; 0 <= i && i < 10; (int)double_array[i] == i;
    public static void func() {
        int size = 10;
        boolean[] boolean_array = new boolean[size];
        byte[] byte_array = new byte[size];
        char[] char_array = new char[size];
        short[] short_array = new short[size];
        int[] int_array = new int[size];
        long[] long_array = new long[size];
        double[] double_array = new double[size];
        float[] float_array = new float[size];

        for (int i = 0; i < size; i++) {
            boolean tmp = false;
            if (i % 2 == 0) {
                tmp = true;
            }
            boolean_array[i] = tmp;
            byte_array[i] = (byte) i;
            char_array[i] = (char) i;
            short_array[i] = (short) i;
            int_array[i] = i;
            long_array[i] = (long) i;
            double_array[i] = (double) i;
            float_array[i] = (float) i;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:2: error: cannot find symbol
    //@ ensures boolean_array.length == 10;
                ^
  symbol:   variable boolean_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:3: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; boolean_array[i] <==> (i % 2 == 0);
                                                 ^
  symbol:   variable boolean_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:4: error: cannot find symbol
    //@ ensures byte_array.length == 10;
                ^
  symbol:   variable byte_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:5: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; byte_array[i] == (byte)i;
                                                 ^
  symbol:   variable byte_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:6: error: cannot find symbol
    //@ ensures short_array.length == 10;
                ^
  symbol:   variable short_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:7: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; short_array[i] == (short)i;
                                                 ^
  symbol:   variable short_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:8: error: cannot find symbol
    //@ ensures int_array.length == 10;
                ^
  symbol:   variable int_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:9: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; int_array[i] == i;
                                                 ^
  symbol:   variable int_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:10: error: cannot find symbol
    //@ ensures long_array.length == 10;
                ^
  symbol:   variable long_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:11: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; long_array[i] == (long)i;
                                                 ^
  symbol:   variable long_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:12: error: cannot find symbol
    //@ ensures char_array.length == 10;
                ^
  symbol:   variable char_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:13: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; char_array[i] == (char)i;
                                                 ^
  symbol:   variable char_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:14: error: cannot find symbol
    //@ ensures double_array.length == 10;
                ^
  symbol:   variable double_array
  location: class astore_aload1
/home/max/Documents/JMLGPT/tmp/astore_aload1.java:15: error: cannot find symbol
    //@ ensures \forall int i; 0 <= i && i < 10; (int)double_array[i] == i;
                                                      ^
  symbol:   variable double_array
  location: class astore_aload1
14 errors

